--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,26 +1,26 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-4">S'inscrire sur The Gossip Project ! </h1>
-    <p class="lead">Donnes un email pour te joindre et un mot de passe (min 6 car.)</p>
+    <p class="lead">Donne un email pour te joindre et un mot de passe (min 6 car.)</p>
   </div>
 </div>
 
 <div class="form-group">
 <%= form_tag url_for(action: 'create'), method: "post" do %>
 
-  <%= label_tag 'Ton futur Login (email) : ' %>
+  <%= label_tag '* Ton futur Login (email) : ' %>
   <%= text_field_tag 'email', nil, class: "form-control" %>
   <br /> <br />
 
-  <%= label_tag 'Mot de passe : ' %>
+  <%= label_tag ' * Mot de passe : ' %>
   <%= text_field_tag 'password', nil, class: "form-control" %>
   <br /> <br />
 
-  <%= label_tag 'Prénom : ' %>
+  <%= label_tag '* Prénom : ' %>
   <%= text_field_tag 'first_name', nil, class: "form-control" %>
   <br /> <br />
 
-  <%= label_tag 'Nom : ' %>
+  <%= label_tag '* Nom : ' %>
   <%= text_field_tag 'last_name', nil, class: "form-control" %>
   <br /> <br />
   
