--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,11 +5,17 @@
     <p class="lead">En savoir plus sur l'auteur</p>
   </div>
 </div>
-  <p> 
-  Son prénom et nom : <%= @user.first_name %> <%= @user.last_name %><br/>
-  Son mail : <%= @user.email %><br/>
-  Son age : <%= @user.age %><br/>
-  Sa ville : <a href="<%= city_path %>"> <%= @user.city.name %> </a> <br/>
-  Ma vie, mon oeuvre: <%= @user.description %>
-  </p>
 
+<div class="card text-center">
+  <div class="card-header">
+    <h2> <%= @user.first_name %> <%= @user.last_name %></h2>
+  </div>
+  <div class="card-body">
+    <p class="card-text"><strong>Âge :</strong> <%= @user.age %><br/>
+    <strong>Ville :</strong> <a href="<%= city_path %>"> <%= @user.city.name %> </a> <br/>
+    <strong>Ma vie, mon oeuvre :</strong> <%= @user.description %></p>
+  </div>
+  <div class="card-footer text-muted">
+    <h4> <%= @user.email %> </h4>
+  </div>
+</div>
