--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -20,12 +20,12 @@
   </div>
   <% end %>
  
-<%= form_tag url_for(action: 'create'), method: "post" do %>
+<%= form_tag url_for(action: 'create'), method: 'post' do %>
 
-  <%= label_tag 'Contenu du commentaire : ' %>
+  <%= label_tag 'Commentaire : ' %>
   <%= text_area_tag 'content', @comment.content %>
-  <br /> <br />
+  <br/> <br/>
 
-  <%= submit_tag "Envoyer mon commentaire", class: "btn btn-secondary " %>
+  <%= submit_tag "Envoyer mon commentaire", class: "btn btn-secondary" %>
 
 <% end %>
