created functionalites, still buggy

--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,15 +1,14 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">Créer mon commentaire</h1>
-    <p class="lead">formulaire de création ci-dessous</p>
+    <h1 class="display-4">Add a comment</h1>
   </div>
 </div>
 
  <% if @comment.errors.any? %>
   <div style="padding: 5px;">
     <div class="alert alert-danger" role="alert">
-      <h4 class="alert-heading">Ouups !!</h4>
-      <p>Nous n'avons pas réussi à créer le potin pour la (ou les) raison(s) suivante(s) :</p>
+      <h4 class="alert-heading"></h4>
+      <p>Impossible to add a comment</p>
       <hr>
       <ul>
         <% @comment.errors.full_messages.each do |message| %>
@@ -22,10 +21,10 @@
  
 <%= form_tag url_for(action: 'create'), method: 'post' do %>
 
-  <%= label_tag 'Commentaire : ' %>
+  <%= label_tag 'Comment: ' %>
   <%= text_area_tag 'content', @comment.content %>
   <br/> <br/>
 
-  <%= submit_tag "Envoyer mon commentaire", class: "btn btn-secondary" %>
+  <%= submit_tag "Send", class: "btn btn-secondary" %>
 
 <% end %>
