--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,16 +1,16 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">Editer un commentaire </h1>
-    <p class="lead">formulaire de modification ci-dessous</p>
+    <h1 class="display-4">Update a comment </h1>
+    <p class="lead"></p>
   </div>
 </div>
 
 <%= form_tag url_for(action: 'update'), method: "put" do %>
 
-  <%= label_tag 'Contenu du commentaire : ' %>
+  <%= label_tag 'Text: ' %>
   <%= text_area_tag 'content', @comment.content %>
   <br /> <br />
 
-  <%= submit_tag "Mettre à jour", class: "btn btn-secondary " %>
+  <%= submit_tag "Update", class: "btn btn-secondary " %>
 
 <% end %>
