--- a/app/views/gossips/edit.html.erb
+++ b/app/views/gossips/edit.html.erb
@@ -1,20 +1,19 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">Editer un potin </h1>
-    <p class="lead">formulaire de modification ci-dessous</p>
+    <p class="lead">Edit</p>
   </div>
 </div>
 
 <%= form_tag url_for(action: 'update'), method: "put" do %>
 
-  <%= label_tag 'Titre du potin : ' %>
+  <%= label_tag 'Title: ' %>
   <%= text_field_tag 'title', @gossip.title %>
   <br /> <br />
 
-  <%= label_tag 'Contenu du potin : ' %>
+  <%= label_tag 'Text: ' %>
   <%= text_area_tag 'content', @gossip.content %>
   <br /> <br />
 
-  <%= submit_tag "Modifier mon potin", class: "btn btn-secondary " %>
+  <%= submit_tag "Send", class: "btn btn-secondary " %>
 
 <% end %>
