--- a/app/views/gossips/new.html.erb
+++ b/app/views/gossips/new.html.erb
@@ -1,16 +1,15 @@
 
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">Créer mon potin</h1>
-    <p class="lead">Remplissez le formulaire langue de vipère...</p>
+    <p class="lead">New gossip</p>
   </div>
 </div>
 
  <% if @gossip.errors.any? %>
   <div style="padding: 5px;">
     <div class="alert alert-danger" role="alert">
-      <h4 class="alert-heading">Ouups !!</h4>
-      <p>Nous n'avons pas réussi à créer le potin pour la (ou les) raison(s) suivante(s) :</p>
+      <h4 class="alert-heading"></h4>
+      <p>Impossible to save your gossip</p>
       <hr>
       <ul>
         <% @gossip.errors.full_messages.each do |message| %>
@@ -23,15 +22,15 @@
  
 <%= form_tag url_for(action: 'create'), method: "post" do %>
 
-  <%= label_tag 'Titre du potin : ' %>
+  <%= label_tag 'Title: ' %>
   <%= text_field_tag 'title', @gossip.title %>
   <br /> <br />
 
-  <%= label_tag 'Contenu : ' %>
+  <%= label_tag 'Text: ' %>
   <%= text_area_tag 'content', @gossip.content %>
   <br /> <br />
 
-  <%= submit_tag "Envoyer mon potin", class: "btn btn-secondary " %>
+  <%= submit_tag "Send", class: "btn btn-secondary " %>
 
 <% end %>
 
