--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,15 +28,15 @@
             </li>
             <li class="nav-item">
               <% if logged_in?  %>
-                <%= link_to "Déconnexion", session_path(session[:user_id]), method: :delete, class: "nav-link" %>
+                <%= link_to "Logout", session_path(session[:user_id]), method: :delete, class: "nav-link" %>
               <% else %>
                 <div class="dropdown">
                   <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Connexion
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <%= link_to "S'inscrire", new_user_path, class: "nav-link" %>
-                    <%= link_to "Se connecter", new_session_path, class: "nav-link" %>
+                    <%= link_to "Signup", new_user_path, class: "nav-link" %>
+                    <%= link_to "Login", new_session_path, class: "nav-link" %>
                   </div>
                 </div>
               <% end %>
