--- a/app/views/welcome/first_name.html.erb
+++ b/app/views/welcome/first_name.html.erb
@@ -1,8 +1,8 @@
 
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">BIENVENUE <%= params[:first_name] %> ! </h1>
-    <p class="lead">Ici c'est notre super site de potins, il est chouette, non ?</p>
+    <h1 class="display-4">Welcome <%= params[:first_name] %> ! </h1>
+    <p class="lead"></p>
   </div>
 </div>
 
